Fix Google CSV quoted numbers parsing

--- a/index.html
+++ b/index.html
@@ -107,70 +107,75 @@ footer{margin-top:24px;color:var(--muted);font-size:12px;text-align:center}
 
   <footer>© 2025 The Financial Trader — Institutional Dashboard Prototype</footer>
 <script>
-const CSV_INDEX='https://docs.google.com/spreadsheets/d/e/2PACX-1vR7odboGysDAKdqoAO-YB7DAf_6AHdacQTQJ3wQ98nDnfXBh4XygeUr1MDrimqp2i3kcotY_Xn_0kCt/pub?output=csv';
+const CSV_INDEX = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR7odboGysDAKdqoAO-YB7DAf_6AHdacQTQJ3wQ98nDnfXBh4XygeUr1MDrimqp2i3kcotY_Xn_0kCt/pub?output=csv';
 
-const needle=document.getElementById('needle');
-const mm3El=document.getElementById('mm3Value');
-const updEl=document.getElementById('lastUpdate');
-const usVal=document.getElementById('usVal');
-const euVal=document.getElementById('euVal');
-const usBar=document.getElementById('usBar');
-const euBar=document.getElementById('euBar');
+const needle = document.getElementById('needle');
+const mm3El  = document.getElementById('mm3Value');
+const updEl  = document.getElementById('lastUpdate');
+const usVal  = document.getElementById('usVal');
+const euVal  = document.getElementById('euVal');
+const usBar  = document.getElementById('usBar');
+const euBar  = document.getElementById('euBar');
 
-// ✅ converte "−0,046" o " 0,083 " in numero JS
-function parseNumber(val){
-  if(!val) return 0;
+/* 🔧 Funzione che pulisce completamente e converte */
+function parseNumber(val) {
+  if (!val) return 0;
   return parseFloat(
     val
-      .replace(/\s/g,'')        // rimuove spazi
-      .replace(/[−–]/g,'-')     // converte il simbolo meno "lungo"
+      .replace(/"/g, '')        // toglie le virgolette
+      .replace(/\s/g, '')       // spazi
+      .replace(/[−–]/g, '-')    // eventuale meno lungo
       .replace(',', '.')        // converte virgola in punto
-      .replace(/[^0-9\.\-]/g,'')// rimuove tutto ciò che non è cifra/punto/segno
+      .replace(/[^0-9.\-]/g, '')// lascia solo cifre, punto, segno
   ) || 0;
 }
 
-function setGauge(v){
-  const val=Math.max(-5,Math.min(5,Number(v)||0));
-  const angle=-90+((val+5)/10)*180;
-  needle.style.transform=`rotate(${angle}deg)`;
-  mm3El.textContent=val.toFixed(3);
-}
-function setMomentum(bar,valEl,value){
-  const val=Math.max(-5,Math.min(5,Number(value)||0));
-  valEl.textContent=val.toFixed(3);
-  const pct=Math.abs(val)/5*100;
-  const color=val>0?'var(--green)':val<0?'var(--red)':'var(--amber)';
-  bar.style.width=pct+'%';
-  bar.style.background=color;
-  bar.style.marginLeft=val>0?'50%':'calc(50% - '+pct+'%)';
+function setGauge(v) {
+  const val = Math.max(-5, Math.min(5, Number(v) || 0));
+  const angle = -90 + ((val + 5) / 10) * 180;
+  needle.style.transform = `rotate(${angle}deg)`;
+  mm3El.textContent = val.toFixed(3);
 }
 
-async function loadIndex(){
-  try{
-    const res=await fetch(CSV_INDEX+'&t='+Date.now());
-    const text=await res.text();
+function setMomentum(bar, valEl, value) {
+  const val = Math.max(-5, Math.min(5, Number(value) || 0));
+  valEl.textContent = val.toFixed(3);
+  const pct = Math.abs(val) / 5 * 100;
+  const color = val > 0 ? 'var(--green)' : val < 0 ? 'var(--red)' : 'var(--amber)';
+  bar.style.width = pct + '%';
+  bar.style.background = color;
+  bar.style.marginLeft = val > 0 ? '50%' : `calc(50% - ${pct}%)`;
+}
 
-    // rileva automaticamente il separatore
-    const sep=text.includes(';')?';':',';
-    const lines=text.trim().split('\n').filter(l=>l.includes(sep));
+async function loadIndex() {
+  try {
+    const res = await fetch(CSV_INDEX + '&t=' + Date.now());
+    const text = await res.text();
 
-    const last=lines[lines.length-1].split(sep);
-    const dt=(last[0]||'').trim();
-    const mm3=parseNumber(last[1]);
-    const us=parseNumber(last[2]);
-    const eu=parseNumber(last[3]);
+    const lines = text.trim().split('\n').filter(l => l.includes(','));
+    const last = lines[lines.length - 1].split(',');
+    
+    // 🔍 estrai campi (rimuovendo virgolette e simboli)
+    const dt  = (last[0] || '').replace(/"/g, '').trim();
+    const mm3 = parseNumber(last[1]);
+    const us  = parseNumber(last[2]);
+    const eu  = parseNumber(last[3]);
 
-    console.log('Parsed CSV →', {dt, mm3, us, eu}); // ✅ DEBUG
+    console.log('Parsed →', { dt, mm3, us, eu });
 
-    const d=new Date(dt);
-    const pretty=!isNaN(d)?d.toISOString().slice(0,10):dt;
-    updEl.textContent=`Updated: ${pretty||'—'}  |  Scale: −5 … +5`;
+    const d = new Date(dt);
+    const pretty = !isNaN(d) ? d.toISOString().slice(0,10) : dt;
+
+    updEl.textContent = `Updated: ${pretty || '—'}  |  Scale: −5 … +5`;
     setGauge(mm3);
-    setMomentum(usBar,usVal,us);
-    setMomentum(euBar,euVal,eu);
-  }catch(e){
-    console.error('CSV read error:',e);
-    setGauge(0);setMomentum(usBar,usVal,0);setMomentum(euBar,euVal,0);
+    setMomentum(usBar, usVal, us);
+    setMomentum(euBar, euVal, eu);
+
+  } catch (e) {
+    console.error('CSV read error:', e);
+    setGauge(0);
+    setMomentum(usBar, usVal, 0);
+    setMomentum(euBar, euVal, 0);
   }
 }
 
